# el-pavidffeliz

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC_V02_PROJECT_INSTRUCTIONS.md  STATUS.md  audit_report.md  build-windows.ps1  build.sh  claude_code_audit_prompt.md  iloveavidf_ui_v1_final.html  ilovepavidf_Spec_v0.1.docx  ilovepavidf_Spec_v0.2.docx
docs/: macos-release.md  windows-handoff.md
docs/releases/: v0.1.0-prototype.md  (+1 more)
electron/: package-lock.json  package.json  vite.config.js
python/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/assets/fonts/: README.md
python/pyinstaller/: entrypoint.py  worker.spec  worker_macos_smoke.spec
python/scripts/: build_worker.py  vendor_poppler_macos.py
python/src/ilovepavidf_backend/: __init__.py  __main__.py  constants.py  protocol.py  runtime_paths.py  worker.py
python/src/ilovepavidf_backend/operations/: __init__.py  common.py  health.py  image.py  pdf_overlay.py  pdf_render.py  pdf_structure.py
python/src/pavidffeliz_backend/: __init__.py  __main__.py  constants.py  errors.py  worker.py
python/src/pavidffeliz_backend/operations/: common.py  health.py  image.py  pdf_edit.py  pdf_overlay.py  pdf_render.py  pdf_structure.py
python/src/pavidffeliz_backend/pdf/: __init__.py  geometry.py
python/tests/: __init__.py  helpers.py  test_dependency_imports.py  test_image_operations.py  test_pdf_geometry.py  test_pdf_operations.py  test_pdf_render_operations.py  test_protocol.py  test_runtime_paths.py  test_worker_health.py  test_worker_operations.py  test_worker_pdf_render.py
(+56 files in other folders)
