[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pavidffeliz-backend"
version = "0.1.0"
description = "Python processing backend for the El PaviDFeliz desktop app."
requires-python = ">=3.11"
dependencies = [
  "pdf2image==1.17.0",
  "Pillow==10.4.0",
  "pypdf==4.3.1",
  "pycryptodome==3.20.0",
  "reportlab==4.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
